# CPP-Primer

./: README.md  chapter12.md  chapter13.md  content.md
Blob/: Blob.h  BlobPtr.h  main.cpp
TextQuery/: AndQuery.cpp  AndQuery.h  BinaryQuery.h  CMakeLists.txt  NotQuery.cpp  NotQuery.h  OrQuery.cpp  OrQuery.h  Query.cpp  Query.h  QueryResult.cpp  QueryResult.h  Query_base.h  README.md  TextQuery.cpp  TextQuery.h  WordQuery.h  main.cpp  make_plural.h
Vec/: Vec.h  main.cpp
chapter12/: README.md  ex12_01.cpp  ex12_01.h  ex12_06.cpp  ex12_07.cpp  ex12_14.cpp  ex12_16.cpp  ex12_19.cpp  ex12_19.h  ex12_20.cpp  ex12_22.cpp  ex12_22.h  ex12_23_1.cpp  ex12_23_2.cpp  ex12_24.cpp  ex12_26.cpp  ex12_28.cpp  ex12_30.cpp  ex12_30.h  ex12_32.cpp  ex12_32.h  make_plural.h
chapter13/: README.md  ex13_05.h  ex13_07.cpp  ex13_08.h  ex13_11.h  ex13_13.cpp  ex13_14.cpp  ex13_15.cpp  ex13_16.cpp  ex13_18.h  ex13_19.h  ex13_22.h  ex13_26.cpp  ex13_26.h  ex13_27.h  ex13_28.h  ex13_30.cpp  ex13_31.cpp  ex13_34.cpp  ex13_34.h  ex13_36.h  ex13_39.cpp  ex13_39.h  ex13_42.cpp  ex13_42.h  ex13_43.cpp  ex13_43.h  ex13_44.cpp  ex13_44.h  ex13_48.cpp  ex13_49_StrVec.cpp  ex13_49_String.cpp  ex13_53.cpp  ex13_53.h  ex13_55.cpp  ex13_58.cpp
chapter14/: README.md  ex14_02.cpp  ex14_02.h  ex14_05.cpp  ex14_05.h  ex14_05_main.cpp  ex14_15.cpp  ex14_15.h  ex14_15_main.cpp  ex14_35.cpp  ex14_36.cpp  ex14_37.cpp  ex14_38.cpp  ex14_39.cpp  ex14_40.cpp  ex14_43.cpp  ex14_44.cpp
chapter15/: Bulk_quote.h  Disc_quote.h  Limit_quote.h  README.md  basket.h  ex15_03.cpp  ex15_03.h  ex15_05.h  ex15_06.cpp  (+12 more)
(+15 files in other folders)
